--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -138,6 +138,7 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="AssetBrowser.h" />
+    <ClInclude Include="AxisBehavior.h" />
     <ClInclude Include="BrowserItem.h" />
     <ClInclude Include="BrowserItemContextualMenu.h" />
     <ClInclude Include="Context.h" />
@@ -165,6 +166,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="appTest.cpp" />
     <ClCompile Include="AssetBrowser.cpp" />
+    <ClCompile Include="AxisBehavior.cpp" />
     <ClCompile Include="BrowserItem.cpp" />
     <ClCompile Include="BrowserItemContextualMenu.cpp" />
     <ClCompile Include="Context.cpp" />
