--- a/ECS/ECS.vcxproj
+++ b/ECS/ECS.vcxproj
@@ -131,11 +131,13 @@
   <ItemGroup>
     <ClInclude Include="Archetype.h" />
     <ClInclude Include="CCamera.h" />
+    <ClInclude Include="CLight.h" />
     <ClInclude Include="CMeshRenderer.h" />
     <ClInclude Include="CTransform.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="IComponent.h" />
     <ClInclude Include="Metatype.h" />
+    <ClInclude Include="CTerrainRender.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Entity.inl" />
