--- a/ECS/ECS.vcxproj.filters
+++ b/ECS/ECS.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="CTransform.h">
       <Filter>头文件\Components</Filter>
     </ClInclude>
+    <ClInclude Include="CLight.h">
+      <Filter>头文件\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="CTerrainRender.h">
+      <Filter>头文件\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Metatype.inl">
