Building GPU Driven Terrain

--- a/ECS/ECS.vcxproj
+++ b/ECS/ECS.vcxproj
@@ -137,7 +137,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="IComponent.h" />
     <ClInclude Include="Metatype.h" />
-    <ClInclude Include="CTerrainRender.h" />
+    <ClInclude Include="CTerrainRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Entity.inl" />
