--- a/Renderer/Renderer.vcxproj.filters
+++ b/Renderer/Renderer.vcxproj.filters
@@ -70,6 +70,12 @@
     <Filter Include="头文件\Uploader">
       <UniqueIdentifier>{9c08e0a5-ef86-4ebf-9611-ffa6fc69c49a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\Renderer\Terrain">
+      <UniqueIdentifier>{60bdf7e4-dcca-41dd-b409-3946acff289b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Renderer\Terrain">
+      <UniqueIdentifier>{d503db3a-3e67-4964-a225-0c1de2db2ac2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BuddyHeapAllocator.h">
@@ -195,6 +201,9 @@
     <ClInclude Include="UploaderEngine.h">
       <Filter>头文件\Uploader</Filter>
     </ClInclude>
+    <ClInclude Include="Terrain.h">
+      <Filter>头文件\Renderer\Terrain</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BuddyHeapAllocator.cpp">
@@ -316,6 +325,9 @@
     </ClCompile>
     <ClCompile Include="UploaderEngine.cpp">
       <Filter>源文件\Uploader</Filter>
+    </ClCompile>
+    <ClCompile Include="Terrain.cpp">
+      <Filter>源文件\Renderer\Terrain</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
