--- a/Resources/Resources.vcxproj.filters
+++ b/Resources/Resources.vcxproj.filters
@@ -35,5 +35,6 @@
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\Editor\AxisRender.hlsl" />
+    <FxCompile Include="Shaders\Engine\GPUDrivenTerrain\TraverseQuadTree.hlsl" />
   </ItemGroup>
 </Project>
