--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -14,10 +14,10 @@ Size=1707,996
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=856,696
-Size=851,300
+Pos=856,675
+Size=851,321
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000002,0
 
 [Window][TestPanel1]
 Pos=117,368
@@ -50,14 +50,14 @@ Size=1480,913
 Collapsed=0
 
 [Window][Shader Editor##1]
-Pos=856,696
-Size=851,300
+Pos=0,675
+Size=854,321
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,1
 
 [Window][Asset Browser##2]
-Pos=0,696
-Size=854,300
+Pos=0,675
+Size=854,321
 Collapsed=0
 DockId=0x00000001,0
 
@@ -74,32 +74,32 @@ DockId=0x00000004,0
 
 [Window][Hierarchy##3]
 Pos=0,19
-Size=329,675
+Size=329,654
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Scene View##4]
 Pos=331,19
-Size=1028,675
+Size=998,654
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Inspector##5]
-Pos=1361,19
-Size=346,675
+Pos=1331,19
+Size=376,654
 Collapsed=0
 DockId=0x0000000C,0
 
 [Docking][Data]
 DockSpace         ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=Y NoWindowMenuButton=1
-  DockNode        ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,675 Split=X NoWindowMenuButton=1 Selected=0x47F63A4B
+  DockNode        ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,654 Split=X NoWindowMenuButton=1 Selected=0x47F63A4B
     DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=1116,641 NoWindowMenuButton=1 Selected=0x16610708
     DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=589,641 Split=X NoWindowMenuButton=1 Selected=0x47F63A4B
       DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=329,641 NoWindowMenuButton=1 Selected=0xE269AA3C
       DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1376,641 Split=X NoWindowMenuButton=1
-        DockNode  ID=0x00000008 Parent=0x0000000B SizeRef=1028,641 NoWindowMenuButton=1 Selected=0x880592AB
-        DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=346,641 CentralNode=1 NoWindowMenuButton=1 Selected=0x83C37F7E
-  DockNode        ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,300 Split=X NoWindowMenuButton=1 Selected=0x6AB70705
-    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=854,334 NoWindowMenuButton=1 Selected=0x6AB70705
+        DockNode  ID=0x00000008 Parent=0x0000000B SizeRef=998,641 NoWindowMenuButton=1 Selected=0x880592AB
+        DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=376,641 CentralNode=1 NoWindowMenuButton=1 Selected=0x83C37F7E
+  DockNode        ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,321 Split=X NoWindowMenuButton=1 Selected=0x6AB70705
+    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=854,334 NoWindowMenuButton=1 Selected=0x47F63A4B
     DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=851,334 NoWindowMenuButton=1 Selected=0xE927CF2F
 
