--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -100,6 +100,6 @@ DockSpace         ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=Y
         DockNode  ID=0x00000008 Parent=0x0000000B SizeRef=998,641 NoWindowMenuButton=1 Selected=0x880592AB
         DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=376,641 CentralNode=1 NoWindowMenuButton=1 Selected=0x83C37F7E
   DockNode        ID=0x00000005 Parent=0x3F20F338 SizeRef=1707,321 Split=X NoWindowMenuButton=1 Selected=0x6AB70705
-    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=854,334 NoWindowMenuButton=1 Selected=0x47F63A4B
+    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=854,334 NoWindowMenuButton=1 Selected=0x6AB70705
     DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=851,334 NoWindowMenuButton=1 Selected=0xE927CF2F
 
