--- a/Resources/Resources.vcxproj
+++ b/Resources/Resources.vcxproj
@@ -147,7 +147,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Shaders\Engine\GPUDrivenTerrain\TraverseQuadTree.hlsl">
+    <FxCompile Include="Shaders\Engine\GPUDrivenTerrain\TerrainBuilder.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">4.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compute</ShaderType>
