--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -40,7 +40,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <LibraryPath>..\ThirdParty\lib\DXC;..\ThirdParty\lib\DirectStorage;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\ThirdParty\lib\DXC;..\ThirdParty\lib\DirectStorage;..\ThirdParty\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -113,7 +113,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>dstorage.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>dstorage.lib;assimp-vc142-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\DXDance\ThirdParty\lib\DirectStorage;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -134,6 +134,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ECS\ECS.vcxproj">
+      <Project>{50ff7f0a-d1ee-4ba5-8a02-96a2bd2367fc}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\GHL\GHL.vcxproj">
       <Project>{ee8df10c-9bea-4b8d-9921-68e186f813cf}</Project>
     </ProjectReference>
