--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -161,6 +161,7 @@
     </ClInclude>
     <ClInclude Include="DeferredLightPass.h" />
     <ClInclude Include="FileHandle.h" />
+    <ClInclude Include="FormatConverter.h" />
     <ClInclude Include="GBufferPass.h" />
     <ClInclude Include="GPUCamera.h" />
     <ClInclude Include="GPUProfiler.h" />
@@ -168,7 +169,7 @@
     <ClInclude Include="Material.h" />
     <ClInclude Include="MemoryAliasingHelper.h" />
     <ClInclude Include="Mesh.h" />
-    <ClInclude Include="MinMaxHeightMapGenerator.h" />
+    <ClInclude Include="TerrainOfflineTask.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="RootConstantsPerFrame.h" />
@@ -217,13 +218,14 @@
     <ClCompile Include="DeferredLightPass.cpp" />
     <ClCompile Include="DirectStorageTest.cpp" />
     <ClCompile Include="FileHandle.cpp" />
+    <ClCompile Include="FormatConverter.cpp" />
     <ClCompile Include="GBufferPass.cpp" />
     <ClCompile Include="GPUProfiler.cpp" />
     <ClCompile Include="LinearBufferAllocator.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="MemoryAliasingHelper.cpp" />
     <ClCompile Include="Mesh.cpp" />
-    <ClCompile Include="MinMaxHeightMapGenerator.cpp" />
+    <ClCompile Include="TerrainOfflineTask.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="PoolDescriptorAllocator.cpp" />
     <ClCompile Include="PoolCommandListAllocator.cpp" />
