--- a/Math/Math.vcxproj.filters
+++ b/Math/Math.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Helper.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Frustum.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector.cpp">
@@ -39,6 +42,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Quaternion.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Frustum.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
